--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -6,21 +6,23 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/frame"
         android:layout_width="wrap_content"
         android:paddingEnd="21dp"
         android:paddingStart="21dp"
         android:paddingBottom="11dp"
         android:paddingTop="11dp"
         android:layout_marginEnd="10dp"
-        android:background="@drawable/category_frame"
+        android:background="@drawable/category_not_choice_frame"
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/category_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="카테고리"
             android:textColor="@color/white"
-            android:fontFamily="@font/notosans_medium"
+            android:fontFamily="@font/notosans_bold"
             android:includeFontPadding="false"
             android:textSize="15sp" />
 
