add : 카테고리 디테일 추가

--- a/app/src/main/res/drawable/category_not_choice_frame.xml
+++ b/app/src/main/res/drawable/category_not_choice_frame.xml
@@ -4,6 +4,6 @@
         android:radius="16dp"
         />
     <solid
-        android:color="#C15454"
+        android:color="#E1F6E6"
         />
 </shape>
