--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,7 +15,8 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="홈화면" />
+            android:textSize="100dp"
+            android:text="adsfdasffadsdfasfads" />
 
     </FrameLayout>
 </layout>
