[UPDATE] UI 업데이트

--- a/app/src/main/res/layout/home_comment_item.xml
+++ b/app/src/main/res/layout/home_comment_item.xml
@@ -5,6 +5,7 @@
     android:layout_width="180dp"
     android:background="@drawable/home_background"
     android:elevation="6dp"
+    android:id="@+id/comment_contentview"
     android:backgroundTint="@color/main_color"
     android:layout_margin="10dp"
     android:layout_height="240dp">
