--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -15,10 +15,19 @@
         android:id="@+id/homeFragment"
         android:name="com.pss.highthon_android.view.home.HomeFragment"
         tools:layout="@layout/fragment_home"
-        android:label="HomeFragment" />
+        android:label="HomeFragment" >
+        <action
+            android:id="@+id/action_homeFragment_to_homeCommentFragment"
+            app:destination="@id/homeCommentFragment" />
+    </fragment>
     <fragment
         android:id="@+id/uploadFragment"
         android:name="com.pss.highthon_android.view.UploadFragment"
         tools:layout="@layout/fragment_upload"
         android:label="UploadFragment" />
+    <fragment
+        android:id="@+id/homeCommentFragment"
+        tools:layout="@layout/fragment_home_comment"
+        android:name="com.pss.highthon_android.view.home.HomeCommentFragment"
+        android:label="HomeCommentFragment" />
 </navigation>
