--- a/app/src/main/res/layout/fragment_home_comment.xml
+++ b/app/src/main/res/layout/fragment_home_comment.xml
@@ -46,9 +46,9 @@
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/notosans_light"
+            android:textSize="20sp"
             android:text="오늘은 저의 생일이에요 모두가 저를 축하해주면 좋겠어요! 다들 오늘도 즐거운 하루 보내시길.."
             android:textColor="@color/black"
-            android:textSize="15dp"
             android:textStyle="bold"
 
             app:layout_constraintStart_toStartOf="@+id/title"
